--- a/index.html
+++ b/index.html
@@ -2,8 +2,107 @@
 <html>
 <head>
 <title>WWW.SAAD AHMED COMPANY LTD.COM</title>
+<style>
+body{
+background-color:#5bbec7;
+}
+.continer{
+margin-top:25px;
+background-color: #60f6f1;
+border: solid gold;
+width: 1350px;
+font-size: 18px;
+font-style: oblique;
+margin:auto;
+overflow: hidden;
+border: 50px doted;
+border-radius: 10px;
+}
+.header{
+background-color: yellowgreen;
+border: solid red;
+width: 100%;
+float: left;
+text-align:center;
+font-size: 64px;
+}
+.sideber-left{
+background-color: Gray;
+width: 291px;
+border: 2 px solid black;
+float: left;
+text-align:center;
+}
+.contantnt{
+background-color: black;
+width: 750px;
+float: left;
+text-align:center;
+}
+.sideber_right{
+background-color: blueviolet;
+width: 291px;
+float: left;
+border: 1px solid white;
+text-align:center;
+}
+.footer{
+background-color: yellowgreen;
+width: 100%;
+float: left;
+border: solid red
+text-align:center;
+}
 
-<link href="style.css" rel="stylesheet" type="text/css"/>
+.menu{
+background-color: #533076;
+height: 50px;
+}
+.menu ul{
+list-style-type: none;
+display: inline-flex;
+}
+.menu ul li{
+
+}
+.menu ul li a{
+background: linear-gradient(#c43474,#EDF2D3);
+color: white;
+text-decoration: none;
+margin: auto;
+margin-right: 5px;
+padding: 8px ;
+}
+.menu ul li a:hover{
+background: linear-gradient(red,green) !important;
+}
+.logo img{
+float: left;
+}
+.site_name{
+font-style: Rockwell;
+background-color:#57c132;
+}
+.social_menu{
+
+}
+.social_menu img{
+float: right;
+margin-right: 5px;
+}
+
+
+
+.header ul li{float:left;list-style-type:none}
+.header ul li{border-left:1px solid red;border-right:1px solid red}
+.header ul li:last-child{border-right:0px solid }
+.header ul li:first-child{border-left:0px}
+.header ul li a{display:block;padding:13px 12px;text-decoration:none;color:white}
+.header ul li a:hover{color:black;background-color:white;}
+.footer{overflow:hidden}
+
+.footer_left{width:230px;float:left}
+</style>
 </head>
 <body>
 <div class="continer">
@@ -83,4 +182,5 @@
 </div>
 
 </body>
+
 </html>
